esm error fix (attempt 1)
by adding string width to resolution

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "next lint"
   },
   "resolutions": {
-    "cliui":"7.0.2"
+    "cliui":"7.0.2",
+    "string-width": "4.2.3"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
