--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iconichippo",
   "version": "0.1.0",
   "private": true,
-  "main":"dist/server.js",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "generate-types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
@@ -15,7 +15,7 @@
     "lint": "next lint"
   },
   "resolutions": {
-    "cliui":"7.0.2",
+    "cliui": "7.0.2",
     "string-width": "4.2.3"
   },
   "dependencies": {
@@ -53,6 +53,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
